Change general font

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  font-family: 'Lora', "굴림", 'Gulim', serif;
+  font-family: 'Lora', "돋움", 'Dotum', serif;
   font-size: 1.125rem;
   color: #404040;
   position: relative;
@@ -26,7 +26,7 @@ p {
   margin: 1.875rem 0;
 }
 h1,h2,h3,h4,h5,h6 {
-  font-family: 'Open Sans', 'Helvetica Neue', "굴림", 'Gulim', Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', "돋움", 'Dotum', Helvetica, Arial, sans-serif;
   font-weight: 800;
   line-height: 1.6;
 }
