--- a/_layouts/post-project.html
+++ b/_layouts/post-project.html
@@ -8,7 +8,7 @@ layout: page
 
 <div class="posts-list">
   {% for post in posts %}
-  {% if post.categories contains 'project' %}
+  {% if post.categories contains 'blog' %}
   <article class="post-preview">
     <a href="{{ post.url | relative_url }}">
       <h2 class="post-title">{{ post.title }}</h2>
