--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: base
 
 <div class="container-md">
   <div class="row">
-    <div class="col-xl-12 col-lg-12">
+    <div class="col-lg-12">
 
       {% if page.gh-repo %}
         {% assign gh_split =  page.gh-repo | split:'/'  %}
